name:                DPIM
version:             0.1.0.0
synopsis:            Distributed Personal Information Manager
-- description:         
homepage:            http://www.hsyl20.fr
license:             GPL-3
license-file:        LICENSE
author:              Sylvain HENRY
maintainer:          hsyl20@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable DPIM

  main-is: Mails.hs

  -- other-modules:       
  -- other-extensions:    

  build-depends:       
      base >=4.6 && <4.7, 
      HaskellNet-SSL >=0.2 && <0.3, 
      HaskellNet >=0.3 && <0.4

  hs-source-dirs:      src
  default-language:    Haskell2010
